<resources>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="company_logo">Company Logo</string>
    <string name="application_name">Malzeme Takip Sistemi</string>
    <string name="load_from_net">Güncel Verİyİ Yükle</string>
    <string name="load_from_device">Varolan Verİyİ Kullan</string>
    <string name="version_placeholder">ver. 0.0.0</string>
    <string name="ok">Tamam</string>
    <string name="qrcode">Karekod</string>
    <string name="print_qrcode">KAREKOD YAZDIR</string>
    <string name="rfid">RFID</string>
    <string name="transfer_to_rfid_tag">RFID ETİKETE AKTAR</string>
    <string name="version_prefix">ver. %s</string>
    <string name="remember_password">Şifremi hatırla</string>
    <string name="logging_in">Sisteme Giriş</string>
    <string name="alert_empty_username_password">Kullanıcı adı ve şifrenizi girmelisiniz.</string>
    <string name="controlling_user_data">Bilgileriniz kontrol ediliyor…</string>
    <string name="connecting_application_server">Program sunucusuna bağlanılıyor…</string>
    <string name="loading_customer_and_storage_data">Birim ve depo bilgileri yükleniyor…</string>
    <string name="wrong_username_or_password">Kullanıcı adı ya da şifreniz hatalı gözüküyor.</string>
    <string name="loading_asset_movements">Malzeme hareketleri yükleniyor</string>
    <string name="loading_asset_details">Malzemeler yükleniyor</string>
    <string name="loading_asset_details_from_server">Malzemeler indiriliyor</string>
    <string name="indexing_asset_categories">Malzeme kategorileri indeksleniyor…</string>
    <string name="nav_title_asset_operations">Malzeme İşlemleri</string>
    <string name="nav_title_asset_counting">SAYIM İŞLEMLERİ</string>
    <string name="nav_title_settings">Ayarlar</string>
    <string name="nav_title_logout">Oturumu Kapat</string>
    <string name="alert_data_file_not_found">Aktarılacak veri dosyası bulunamadı</string>
    <string name="sort_by_name_title">Ada Göre</string>
    <string name="sort_by_acq_date_title">Giriş Tarihine Göre</string>
    <string name="sort_by_price_title">Fiyata Göre</string>
    <string name="sort_by_assigned_employee_title">Zimmet Sahibine Göre</string>
    <string name="sort_by_assigned_room_title">Lokasyona Göre</string>
    <string name="counting_op_type">Sayım Tipi</string>
    <string name="operation_type">İşlem Türü</string>
    <string name="counting_op_name">Sayım Adı</string>
    <string name="counting_op_of">Sayım Kriteri</string>
    <string name="counting_op_end_date">Bitiş Tarihi</string>
    <string name="add_operation">İşlem Ekle</string>
    <string name="general_counting_title">GENEL SAYIM</string>
    <string name="storage_counting">DEPO SAYIMI</string>
    <string name="no_internet">İnternet bağlantısı sağlanamadı. Lütfen kontrol edip tekrar deneyiniz.</string>
    <string name="no_server">Program sunucusuna bağlanılamadı. Bu ağ üzerinden bağlanma izniniz olmayabilir.</string>
    <string name="sync_complete">Senkronizasyon işlemi başarıyla gerçekleşti</string>
    <string name="nav_title_sync">SENKRONİZE ET</string>
    <string name="synchronizing">Veriler senkronize ediliyor</string>
    <string name="quitting_application">Programdan çıkmak istediğinize emin misiniz?</string>
    <string name="alert_asset_already_counted">Bu taşınırı zaten saymışsınız</string>
    <string name="invalid_qrcode_read">Geçersiz karekod: </string>
    <string name="invalid_rfid_read">Geçersiz RFID kodu: </string>
    <string name="reset_op_title">İşlemi Sıfırla</string>
    <string name="looking_for_updates">Güncellemeler kontrol ediliyor…</string>
    <string name="version_control_error">Versiyon kontrolü sırasında bir hata gerçekleşti.</string>
    <string name="update_title">Güncelleme</string>
    <string name="alert_message_new_version_found_for_">"%1$s" adlı pakedin güncellenmesi gerekiyor. Kurulum dosyası yüklenecek. Lütfen internet bağlantısını açık tutunuz.</string>
    <string name="downloading_updates">Kurulum dosyası yükleniyor…</string>
    <string name="setup_download_error">Kurulum dosyası yüklenirken bir hata oluştu.</string>
    <string name="data_folder_name">Veriler</string>
    <string name="ops_folder_name">Islemler</string>
    <string name="alert_title_key_file_not_found">Giriş izni sağlanamadı</string>
    <string name="alert_key_file_not_found">Cihazdaki veriyle çalışabilmek için ilk önce masaüstü DVYS uygulaması aracılığıyla verileri eşleştirmelisiniz.</string>
    <string name="alert_error_title">Hata</string>
    <string name="alert_error_message">Beklenmedik bir problem oluştu.</string>
    <string name="alert_initialize_db_error">Cihaz veritabanı güncellenirken bir problem oluştu</string>
    <string name="alert_wrong_password">Şifre hatalı</string>
    <string name="alert_sync_file_not_found">Önce masaüstü modülüyle veri eşleştirmelisiniz.</string>
    <string name="alert_title_sync_file_not_found">Eşleştirme dosyası bulunamadı</string>
    <string name="alert_wrong_username">Kullanıcı adınız veriyi eşleştiren hesap ile uyuşmuyor.</string>
    <string name="loading_saved_data">Cihazdaki veriler yükleniyor</string>
    <string name="alert_message_counting_op_already_exists">Bu sayım işlemi önceden açılmış. İşlem üzerinde kaldığınız yerden sayıma devam edebilir, ya da işlemi sıfırlayıp baştan çalışabilirsiniz.</string>
    <string name="button_continue_existing_counting_op">Devam Et</string>
    <string name="button_empty_existing_counting_op">Sıfırla</string>
    <string name="foreign_asset_qrcode_read">Bu taşınır, çalıştığınız depolar içinde bulunmuyor.</string>
    <string name="alert_asset_already_added">Bu taşınırı zaten eklemişsiniz.</string>
    <string name="alert_query_removing_added_asset">Taşınır, bu işlemden çıkartılarak eski ait olduğu işleme geri aktarılacak. Onaylıyor musunuz?</string>
    <string name="last_control_date">Son Kontrol Tarihi</string>
    <string name="unknown">BİLİNMİYOR</string>
    <string name="first_acquisition_year">Edinme Yılı</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="search_result_no_person_found">Kişi kaydı bulunamadı</string>
    <string name="search_result_no_location_found">Lokasyon kaydı bulunamadı</string>
    <string name="asset_photos_folder_name">Tasinirlar</string>
    <string name="person_photos_folder_name">Kisiler</string>
    <string name="company_department_title">Elektronik Etiketleme ve Demirbaş Yönetim Sistemleri</string>
    <string name="open">Aç</string>
    <string name="close">Kapat</string>
    <string name="_pieces_of_movable">&#032;adet taşınır</string>
    <string name="nav_asset_list_title">Taşınır Listesi</string>
    <string name="nav_person_list_title">Personel Listesi</string>
    <string name="nav_location_list_title">Lokasyon Listesi</string>
    <string name="alert_error_while_downloading_templates">Etiket formatlarını yüklerken bir sorun oluştu</string>
    <string name="wrong_asset_qrcode_read">Okuttuğunuz karekodun formatı hatalı</string>
    <string name="update">Güncelle</string>
    <string name="goto_person">Kişiye Git</string>
    <string name="goto_unit">LOKASYONU GÖRÜNTÜLE</string>
    <string name="goto_type">Türe Git</string>
    <string name="arrow">Ok</string>
    <string name="mark_and_goto_type">İşaretle ve Türe Git</string>
    <string name="mark">İşaretle</string>
    <string name="label_name_surname">Ad Soyad</string>
    <string name="label_location_name">Lokasyon Adı</string>
    <string name="label_category_name">Kategori Adı</string>
    <string name="label_identity_no">TC Kimlik No</string>
    <string name="label_location_code">Birim Kodu</string>
    <string name="label_category_code">Taşınır Kodu</string>
    <string name="alert_query_readding_removed_asset">Bu taşınır, daha önce başka bir işleme aktarılmış. Taşınırı mevcut işleme geri aktarmak ister misiniz?</string>
    <string name="save_title">Kaydet</string>
    <string name="active">AKTİF</string>
    <string name="passive">PASİF</string>
    <string name="broken">ARIZALI</string>
    <string name="alert_title_asset_identification">Taşınır Künyeleme</string>
    <string name="alert_message_asset_identify_missing_input">\"Açıklama\" ve \"Lot/Parti No\" dışındaki tüm alanları girmelisiniz.</string>
    <string name="tagless">KÜNYESİZ</string>
    <string name="updating_asset_data">Bilgiler güncelleniyor</string>
    <string name="nav_title_asset_list">Taşınır Listesi</string>
    <string name="nav_title_counting_ops">Sayım İşlemleri</string>
    <string name="logging_out">Oturumu kapatmak istediğinize emin misiniz?</string>
    <string name="tagging_asset">Künye oluşturuluyor</string>
    <string name="empty_response_from_service">Ana bilgisayardan cevap alınamadı. Lütfen bir süre sonra tekrar deneyin.</string>
    <string name="loading_locations">Lokasyon bilgileri yükleniyor</string>
    <string name="loading_assignment_docs">Zimmet belgeleri yükleniyor</string>
    <string name="loading_operation_details">İşlem detayları yükleniyor</string>
    <string name="storage_belongs">Ait Olduğu Depo</string>
    <string name="add_filter_tag_no_title">Künye</string>
    <string name="add_filter_is_labeled_title">Etiket</string>
    <string name="add_filter_assignment_title">Zimmet</string>
    <string name="add_filter_deployment_title">Konum</string>
    <string name="add_filter_working_status_title">Durum</string>
    <string name="add_filter_counting_status_title">Sayım</string>
    <string name="add_filter_storage_title">Depo</string>
    <string name="remove_filters_title">Filtreleri Kaldır</string>
    <string name="key_file_not_found_on_server">Kullanıcı anahtarı bulunamadı. İlk önce masaüstü modülü ile giriş yapmayı deneyin.</string>
    <string name="alert_message_ftp_upload_error">Dosyalar gönderilemedi. Bağlantınızı kontrol edip tekrar deneyin</string>
    <string name="search_employee">Çevrimiçi Ara</string>
    <string name="no_internet_or_no_employee">Kişi bulunamadı ya da internet bağlantısı yok</string>
    <string name="searching_employee">Personel listesi taranıyor…</string>
    <string name="load_datas">VERİLERİ YÜKLE</string>
    <string name="controlling_internet_connection">İnternet bağlantısı kontrol ediliyor</string>
    <string name="tenant_name">Müşteri Adı</string>
    <string name="related_asset_type">İlgili Malzeme Türü</string>
    <string name="related_person">İlgili Kişi</string>
    <string name="related_location">İlgili Lokasyon</string>
    <string name="related_storage">İlgili Depo</string>
    <string name="deadline">İşlemin tamamlanması gereken tarih</string>
    <string name="labeling_date">Etiket Basım Tarihi</string>
    <string name="working_state">Çalışma Durumu</string>
    <string name="enter_name_or_identity_no">İsim ya da Kimlik No girin</string>
    <string name="enter_type_name_or_code">Tür adı ya da kodu girin</string>
    <string name="employee_to_assign">Verilecek Personel</string>
    <string name="room_to_assign">Verilecek Birim</string>
    <string name="enter_name_or_unit_code">Birim adı ya da kodunu girin</string>
    <string name="choose_an_operation_type">İşlem türünü seçin</string>
    <string name="main_menu">Ana Menü</string>
    <string name="general_counting">GENEL SAYIM</string>
    <string name="by_type">Türe Göre</string>
    <string name="by_location">Lokasyona Göre</string>
    <string name="by_person">Sorumluya Göre</string>
    <string name="general_labeling_title">GENEL ETİKETLEME</string>
    <string name="asset_labeling_title">TAŞINIR ETİKETLEME</string>
    <string name="person_labeling_title">PERSONEL ETİKETLEME</string>
    <string name="location_labeling_title">LOKASYON ETİKETLEME</string>
    <string name="locate">Konum Tespit</string>
</resources>