<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:mContext=".view.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_menu"
            android:title="@string/main_menu"
            android:icon="@drawable/ic_home" />

        <item android:id="@+id/nav_locate"
            android:title="@string/locate"
            android:icon="@drawable/sensor_96px"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/nav_general_counting"
            android:icon="@drawable/movable_96px"
            android:title="@string/general_counting" />

        <item android:id="@+id/nav_settings"
            android:title="@string/nav_title_settings"
            android:icon="@drawable/ic_settings_white"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/nav_logout"
            android:title="@string/nav_title_logout"
            android:icon="@drawable/ic_logout_white"
            app:showAsAction="ifRoom" />
    </group>
</menu>