<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingEnd="@dimen/margin_medium"
    android:paddingStart="@dimen/margin_medium"
    tools:mContext="com.frekanstan.tatf_demo.view.login.LoginFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:contentDescription="@string/company_logo"
        app:srcCompat="@drawable/tagofid_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/tenant_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:drawablePadding="8dp"
        android:hint="@string/tenant_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person"
            android:inputType="text"
            android:background="@color/white"
            android:drawablePadding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_key"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:background="@color/white"
            android:drawablePadding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/load_datas"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/load_datas" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_small"
        android:text="@string/version_placeholder"
        android:textAlignment="textEnd"
        android:textSize="14sp" />
</LinearLayout>