<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:mContext="com.frekanstan.dtys_mobil.view.login.LoginFragment">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_menu_general_labeling_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/movable_96px"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/general_labeling_title" />

        <Button
            android:id="@+id/main_menu_by_location_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/location_96px"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/by_location" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/main_menu_by_type_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/tree_structure_96px"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/by_type" />

        <Button
            android:id="@+id/main_menu_by_responsible_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/person_96px"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/by_person" />

    </LinearLayout>
</LinearLayout>